build/log/idf_py_stdout_output_625844
Command: ninja all
[1/12] Linking C static library esp-idf/espressif__coap/libespressif__coap.a
[2/12] Performing build step for 'bootloader'
[1/1] cd /home/junchannn/esp/hello_world/build/bootloader/esp-idf/esptool_py && /home/junchannn/.espressif/python_env/idf5.5_py3.12_env/bin/python /home/junchannn/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/junchannn/esp/hello_world/build/bootloader/bootloader.bin
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[3/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/junchannn/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/junchannn/esp/hello_world/build/config -I/home/junchannn/esp/hello_world/main -I/home/junchannn/esp/esp-idf/components/newlib/platform_include -I/home/junchannn/esp/esp-idf/components/freertos/config/include -I/home/junchannn/esp/esp-idf/components/freertos/config/include/freertos -I/home/junchannn/esp/esp-idf/components/freertos/config/xtensa/include -I/home/junchannn/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/junchannn/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/junchannn/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/junchannn/esp/esp-idf/components/freertos/esp_additions/include -I/home/junchannn/esp/esp-idf/components/esp_hw_support/include -I/home/junchannn/esp/esp-idf/components/esp_hw_support/include/soc -I/home/junchannn/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/junchannn/esp/esp-idf/components/esp_hw_support/dma/include -I/home/junchannn/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/junchannn/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/junchannn/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/junchannn/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/junchannn/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/junchannn/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/junchannn/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/junchannn/esp/esp-idf/components/heap/include -I/home/junchannn/esp/esp-idf/components/heap/tlsf -I/home/junchannn/esp/esp-idf/components/log/include -I/home/junchannn/esp/esp-idf/components/soc/include -I/home/junchannn/esp/esp-idf/components/soc/esp32 -I/home/junchannn/esp/esp-idf/components/soc/esp32/include -I/home/junchannn/esp/esp-idf/components/soc/esp32/register -I/home/junchannn/esp/esp-idf/components/hal/platform_port/include -I/home/junchannn/esp/esp-idf/components/hal/esp32/include -I/home/junchannn/esp/esp-idf/components/hal/include -I/home/junchannn/esp/esp-idf/components/esp_rom/include -I/home/junchannn/esp/esp-idf/components/esp_rom/esp32/include -I/home/junchannn/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/junchannn/esp/esp-idf/components/esp_rom/esp32 -I/home/junchannn/esp/esp-idf/components/esp_common/include -I/home/junchannn/esp/esp-idf/components/esp_system/include -I/home/junchannn/esp/esp-idf/components/esp_system/port/soc -I/home/junchannn/esp/esp-idf/components/esp_system/port/include/private -I/home/junchannn/esp/esp-idf/components/xtensa/esp32/include -I/home/junchannn/esp/esp-idf/components/xtensa/include -I/home/junchannn/esp/esp-idf/components/xtensa/deprecated_include -I/home/junchannn/esp/esp-idf/components/lwip/include -I/home/junchannn/esp/esp-idf/components/lwip/include/apps -I/home/junchannn/esp/esp-idf/components/lwip/include/apps/sntp -I/home/junchannn/esp/esp-idf/components/lwip/lwip/src/include -I/home/junchannn/esp/esp-idf/components/lwip/port/include -I/home/junchannn/esp/esp-idf/components/lwip/port/freertos/include -I/home/junchannn/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/junchannn/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/junchannn/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/junchannn/esp/esp-idf/components/esp_driver_gpio/include -I/home/junchannn/esp/esp-idf/components/esp_timer/include -I/home/junchannn/esp/esp-idf/components/esp_wifi/include -I/home/junchannn/esp/esp-idf/components/esp_wifi/include/local -I/home/junchannn/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/junchannn/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/junchannn/esp/esp-idf/components/esp_event/include -I/home/junchannn/esp/esp-idf/components/esp_phy/include -I/home/junchannn/esp/esp-idf/components/esp_phy/esp32/include -I/home/junchannn/esp/esp-idf/components/esp_netif/include -I/home/junchannn/esp/esp-idf/components/nvs_flash/include -I/home/junchannn/esp/esp-idf/components/esp_partition/include -I/home/junchannn/esp/esp-idf/components/mqtt/esp-mqtt/include -I/home/junchannn/esp/esp-idf/components/tcp_transport/include -I/home/junchannn/esp/esp-idf/components/esp-tls -I/home/junchannn/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/junchannn/esp/esp-idf/components/mbedtls/port/include -I/home/junchannn/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/junchannn/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/junchannn/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/junchannn/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/junchannn/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/junchannn/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/home/junchannn/esp/esp-idf/components/console -I/home/junchannn/esp/esp-idf/components/vfs/include -I/home/junchannn/esp/esp-idf/components/esp_vfs_console/include -I/home/junchannn/esp/esp-idf/components/esp_eth/include -I/home/junchannn/esp/esp-idf/components/esp_driver_spi/include -I/home/junchannn/esp/esp-idf/components/esp_pm/include -I/home/junchannn/esp/hello_world/managed_components/espressif__coap/port/include -I/home/junchannn/esp/hello_world/managed_components/espressif__coap/libcoap/include -I/home/junchannn/esp/hello_world/managed_components/espressif__pcap/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/junchannn/esp/hello_world=. -fmacro-prefix-map=/home/junchannn/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/junchannn/esp/hello_world/main/main.c
/home/junchannn/esp/hello_world/main/main.c: In function 'test_coap':
/home/junchannn/esp/hello_world/main/main.c:120:5: error: implicit declaration of function 'coap_server_start' [-Wimplicit-function-declaration]
  120 |     coap_server_start();
      |     ^~~~~~~~~~~~~~~~~
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/mqtt_app.c.obj
ninja: build stopped: subcommand failed.
